[project]
name = "FiberAlignmentDemo"
version = "1.0.0"
description = "Performs two axis fiber alignment using Zaber linear stages."
authors = [
    {name = "Jay Leong", email = "jay@zaber.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "zaber-motion>=9.3.2",
]

[dependency-groups]
dev = [
    "ruff~=0.14.0",
    "pyright>=1.1.0",
]

[tool.ruff]
extend = "../../tools/tooling_config/zaber-ruff.toml" # Update relative path for your example

[tool.pyright]
extends = "../../tools/tooling_config/zaber-pyright.toml" # Update relative path for your example
